# Simplex

./: .gitignore  .pre-commit-config.yaml  DATA-PRIVATE.md  README.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: test.yml
demonstrator/: SimplExDemoApp.py
demonstrator/pages/: Icon_view.py  Table_View.py  Tabula_Data.py  Time_Series.py
demonstrator/resources/trained_models/LinearRegression/breast_seer/: model_cv1.pth  optimizer_cv1.pth  simplex.pkl
demonstrator/resources/trained_models/LinearRegression/prostate_cutract/: model_cv1.pth  optimizer_cv1.pth  simplex.pkl
demonstrator/resources/trained_models/LinearRegression/prostate_seer/: model_cv1.pth  optimizer_cv1.pth  simplex.pkl
demonstrator/resources/trained_models/MLP/breast_seer/: model_cv1.pth  optimizer_cv1.pth  simplex.pkl
demonstrator/resources/trained_models/MLP/prostate_cutract/: model_cv1.pth  optimizer_cv1.pth  simplex.pkl
demonstrator/resources/trained_models/MLP/prostate_seer/: model_cv1.pth  optimizer_cv1.pth  simplex.pkl
demonstrator/resources/trained_models/RNN/Time series Prostate Cancer/: model_cv1.pth  optimizer_cv1.pth  simplex.pkl
demonstrator/resources/trained_models/TwoLayerLinearRegression/breast_seer/: model_cv1.pth  optimizer_cv1.pth  simplex.pkl
demonstrator/resources/trained_models/TwoLayerLinearRegression/prostate_cutract/: model_cv1.pth  optimizer_cv1.pth  simplex.pkl
demonstrator/resources/trained_models/TwoLayerLinearRegression/prostate_seer/: model_cv1.pth  optimizer_cv1.pth  simplex.pkl
experiments/: breast_cancer.py  cvxpy_toy.py  jacobian_toy.py  mnist.py  mnist_toy.py  prostate_cancer.py  time_series.py  time_series_prostate_cancer.py  use_case.py
experiments/results/ar/outlier/: plot_results.py
experiments/results/ar/precision/: plot_results.py
experiments/results/ar/quality/: plot_results.py
experiments/results/mnist/: approximation_quality.py
experiments/results/mnist/influence/: plot_results.py
experiments/results/mnist/outlier/: plot_results.py
experiments/results/mnist/quality/: approximation_quality.py  plot_results.py
experiments/results/mnist_toy/: model.pth  optimizer.pth
experiments/results/prostate/outlier/: plot_results.py
experiments/results/prostate/quality/: plot_results.py
explainers/: corpus.py  influence_function.py  nearest_neighbours.py  representer.py  simplex.py
models/: base.py  image_recognition.py  linear_regression.py  recurrent_neural_net.py  tabular_data.py  time_series_forecasting.py  two_linear_layers.py
notebooks/: Run Simplex for time series RNN.ipynb
src/simplexai/experiments/: breast_cancer.py  mnist.py  prostate_cancer.py  time_series.py  time_series_prostate_cancer.py  use_case.py
src/simplexai/experiments/results/ar/outlier/: plot_results.py
src/simplexai/experiments/results/ar/quality/: plot_results.py
src/simplexai/experiments/results/mnist/influence/: plot_results.py
src/simplexai/experiments/results/mnist/outlier/: plot_results.py
src/simplexai/experiments/results/mnist/quality/: plot_results.py
src/simplexai/experiments/results/prostate/outlier/: plot_results.py
src/simplexai/experiments/results/prostate/quality/: plot_results.py
src/simplexai/explainers/: nearest_neighbours.py  representer.py  simplex.py
src/simplexai/models/: base.py  image_recognition.py  linear_regression.py  recurrent_neural_net.py  tabular_data.py  time_series_forecasting.py  two_linear_layers.py
src/simplexai/visualization/: images.py  tables.py  time_series.py
tests/: test_simplex.py
utils/: schedulers.py
visualization/: images.py  tables.py  time_series.py
